--- a/series.conf
+++ b/series.conf
@@ -26316,6 +26316,7 @@
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 	patches.suse/selinux-properly-handle-multiple-messages-in-selinux.patch
 	patches.suse/vfio-type1-fix-va-pa-translation-for-pfnmap-vmas-in-vaddr_get_pfn
+	patches.suse/ALSA-rawmidi-Fix-racy-buffer-resize-under-concurrent.patch
 	patches.suse/netlabel-cope-with-NULL-catmap.patch
 	patches.suse/USB-gadget-fix-illegal-array-access-in-binding-with-.patch
 	patches.suse/fs-binfmt_elf.c-allocate-initialized-memory-in-fill_.patch
