media: xirlink_cit: add missing descriptor sanity checks (bsc#1168952 CVE-2020-11668).

--- a/series.conf
+++ b/series.conf
@@ -26311,6 +26311,7 @@
 	patches.suse/block-bfq-fix-use-after-free-in-bfq_idle_slice_timer.patch
 	patches.suse/0001-media-ov519-add-missing-endpoint-sanity-checks.patch
 	patches.suse/0001-media-stv06xx-add-missing-descriptor-sanity-checks.patch
+	patches.suse/media-xirlink_cit-add-missing-descriptor-sanity-chec.patch
 	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
