powerpc/rtas: fix typo of ibm,open-errinjct in rtas filter (CVE-2020-27777 bsc#1179107 bsc#1179887 ltc#190092).

--- a/series.conf
+++ b/series.conf
@@ -26400,6 +26400,7 @@
 	patches.suse/cifs-Fix-mount-options-set-in-automount.patch
 	patches.suse/cifs-Fix-memory-allocation-in-__smb2_handle_cancelle.patch
 	patches.suse/net-packet-fix-overflow-in-tpacket_rcv.patch
+	patches.suse/powerpc-rtas-fix-typo-of-ibm-open-errinjct-in-rtas-f.patch
 
 	########################################################
 	# end of sorted patches
