tty: Fix ->pgrp locking in tiocspgrp() (bsc#1179745 CVE-2020-29661).

--- a/series.conf
+++ b/series.conf
@@ -26381,6 +26381,7 @@
 	patches.suse/vt-Disable-KD_FONT_OP_COPY.patch
 	patches.suse/Input-sunkbd-avoid-use-after-free-in-teardown-paths.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
+	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
