--- a/series.conf
+++ b/series.conf
@@ -26382,6 +26382,7 @@
 	patches.suse/Input-sunkbd-avoid-use-after-free-in-teardown-paths.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
+	patches.suse/tty-Fix-session-locking.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
