--- a/series.conf
+++ b/series.conf
@@ -26349,6 +26349,7 @@
 	patches.suse/ext4-fix-potential-negative-array-index-in-do_split.patch
 	patches.suse/romfs-fix-uninitialized-memory-leak-in-romfs_dev_rea.patch
 	patches.suse/XEN-uses-irqdesc-irq_data_common-handler_data-to-sto.patch
+	patches.suse/HID-core-Sanitize-event-code-and-type-when-mapping-i.patch
 	patches.suse/block-allow-for_each_bvec-to-support-zero-len-bvec.patch
 	patches.suse/0001-mm-hugetlb-fix-a-race-between-hugetlb-sysctl-handler.patch
 	patches.suse/rbd-require-global-cap_sys_admin-for-mapping-and-unmapping.patch
