--- a/series.conf
+++ b/series.conf
@@ -26296,6 +26296,7 @@
 	patches.suse/mwifiex-Fix-possible-buffer-overflows-in-mwifiex_cmd.patch
 	patches.suse/libertas-dont-exit-from-lbs_ibss_join_existing-with.patch
 	patches.suse/libertas-make-lbs_ibss_join_existing-return-error.patch
+	patches.suse/cfg80211-add-missing-policy-for-NL80211_ATTR_STATUS_.patch
 	patches.suse/ext4-add-cond_resched-to-ext4_protect_reserved_inode.patch
 	patches.suse/vt-selection-handle-pending-signals-in-paste_selecti.patch
 	patches.suse/vt-selection-close-sel_buffer-race.patch
