ring-buffer: Make resize disable per cpu buffer instead of total buffer (CVE-2020-27825 bsc#1179960).

--- a/series.conf
+++ b/series.conf
@@ -26316,6 +26316,7 @@
 	patches.suse/0001-media-stv06xx-add-missing-descriptor-sanity-checks.patch
 	patches.suse/media-xirlink_cit-add-missing-descriptor-sanity-chec.patch
 	patches.suse/xfs-add-agf-freeblocks-verify-in-xfs_agf_verify.patch
+	patches.suse/ring-buffer-make-resize-disable-per-cpu-buffer-instead-of-total-buffer.patch
 	patches.suse/slcan-Don-t-transmit-uninitialized-stack-data-in-pad.patch
 	patches.suse/USB-core-Fix-free-while-in-use-bug-in-the-USB-S-Glib.patch
 	patches.suse/selinux-properly-handle-multiple-messages-in-selinux.patch
