--- a/series.conf
+++ b/series.conf
@@ -26347,6 +26347,7 @@
 	patches.suse/serial-8250-fix-null-ptr-deref-in-serial8250_start_t.patch
 	patches.suse/random32-update-the-net-random-state-on-interrupt-an.patch
 	patches.suse/Bluetooth-Disconnect-if-E0-is-used-for-Level-4.patch
+	patches.suse/ring-buffer-speed-up-buffer-resets-by-avoiding-synchronize_rcu-for-each-cpu.patch
 	patches.suse/net-nfc-rawsock.c-add-CAP_NET_RAW-check.patch
 	patches.suse/nfs-Fix-getxattr-kernel-panic-and-memory-overflow.patch
 	patches.suse/ext4-fix-potential-negative-array-index-in-do_split.patch
