--- a/series.conf
+++ b/series.conf
@@ -26369,6 +26369,7 @@
 	patches.suse/Fonts-Support-FONT_EXTRA_WORDS-macros-for-built-in-f.patch
 	patches.suse/fbcon-Fix-global-out-of-bounds-read-in-fbcon_get_fon.patch
 	patches.suse/0001-perf-core-Fix-race-in-the-perf_mmap_close-function.patch
+	patches.suse/tracing-fix-race-in-trace_open-and-buffer-resize-call.patch
 	patches.suse/powerpc-rtas-Restrict-RTAS-requests-from-userspace.patch
 	patches.suse/xen-events-avoid-removing-an-event-channel-while-han.patch
 	patches.suse/0001-xen-events-add-a-proper-barrier-to-2-level-uevent-un.patch
