--- a/series.conf
+++ b/series.conf
@@ -55513,6 +55513,7 @@
 	patches.suse/nvme-explicitly-update-mpath-disk-capacity-on-revali.patch
 	patches.suse/xprtrdma-fix-incorrect-header-size-calculations.patch
 	patches.suse/powerpc-book3s64-pkeys-Fix-pkey_access_permitted-for.patch
+	patches.suse/hwmon-aspeed-pwm-tacho-Avoid-possible-buffer-overflo.patch
 	patches.suse/hwmon-emc2103-fix-unable-to-change-fan-pwm1_enable-a.patch
 	patches.suse/usb-chipidea-core-add-wakeup-support-for-extcon.patch
 	patches.suse/USB-serial-cypress_m8-enable-Simply-Automated-UPB-PI.patch
