usb: gadget: serial: fix Tx stall after buffer overflow (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54039,6 +54039,7 @@
 	patches.suse/0001-usb-gadget-composite-Fix-bMaxPower-for-SuperSpeedPlu.patch
 	patches.suse/0001-usb-dwc2-Fix-in-ISOC-request-length-checking.patch
 	patches.suse/usb-gadget-ffs-ffs_aio_cancel-Save-restore-IRQ-flags.patch
+	patches.suse/usb-gadget-serial-fix-Tx-stall-after-buffer-overflow.patch
 	patches.suse/0001-USB-misc-iowarrior-add-support-for-the-100-device.patch
 	patches.suse/serial-ar933x_uart-set-UART_CS_-RX-TX-_READY_ORIDE.patch
 	patches.suse/serdev-ttyport-restore-client-ops-on-deregistration.patch
