--- a/series.conf
+++ b/series.conf
@@ -26412,6 +26412,7 @@
 	patches.suse/cifs-Fix-mount-options-set-in-automount.patch
 	patches.suse/cifs-Fix-memory-allocation-in-__smb2_handle_cancelle.patch
 	patches.suse/net-packet-fix-overflow-in-tpacket_rcv.patch
+	patches.suse/target-fix-XCOPY-NAA-identifier-lookup.patch
 
 	########################################################
 	# end of sorted patches
