--- a/series.conf
+++ b/series.conf
@@ -57151,6 +57151,7 @@
 	patches.suse/powerpc-smp-Add-__init-to-init_big_cores.patch
 	patches.suse/ibmvnic-continue-fatal-error-reset-after-passive-ini.patch
 	patches.suse/ibmvnic-fix-NULL-pointer-dereference.patch
+	patches.suse/ALSA-hda-via-Fix-runtime-PM-for-Clevo-W35xSS.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
