xen/xenbus: Allow watches discard events before queueing (bsc#1179508 XSA-349 CVE-2020-29568).

--- a/series.conf
+++ b/series.conf
@@ -26390,6 +26390,7 @@
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 	patches.suse/tty-Fix-session-locking.patch
+	patches.suse/0001-xen-xenbus-Allow-watches-discard-events-before-queue.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
