--- a/series.conf
+++ b/series.conf
@@ -26391,6 +26391,7 @@
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 	patches.suse/tty-Fix-session-locking.patch
 	patches.suse/0001-xen-xenbus-Allow-watches-discard-events-before-queue.patch
+	patches.suse/0002-xen-xenbus-Add-will_handle-callback-support-in-xenbu.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
