--- a/series.conf
+++ b/series.conf
@@ -26392,6 +26392,7 @@
 	patches.suse/tty-Fix-session-locking.patch
 	patches.suse/0001-xen-xenbus-Allow-watches-discard-events-before-queue.patch
 	patches.suse/0002-xen-xenbus-Add-will_handle-callback-support-in-xenbu.patch
+	patches.suse/0003-xen-xenbus-xen_bus_type-Support-will_handle-watch-ca.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
