xenbus/xenbus_backend: Disallow pending watch messages (bsc#1179508 XSA-349 CVE-2020-29568).

--- a/series.conf
+++ b/series.conf
@@ -26394,6 +26394,7 @@
 	patches.suse/0002-xen-xenbus-Add-will_handle-callback-support-in-xenbu.patch
 	patches.suse/0003-xen-xenbus-xen_bus_type-Support-will_handle-watch-ca.patch
 	patches.suse/0004-xen-xenbus-Count-pending-messages-for-each-watch.patch
+	patches.suse/0005-xenbus-xenbus_backend-Disallow-pending-watch-message.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
