xen-blkback: set ring->xenblkd to NULL after kthread_stop() (bsc#1179509 XSA-350 CVE-2020-29569).

--- a/series.conf
+++ b/series.conf
@@ -26395,6 +26395,7 @@
 	patches.suse/0003-xen-xenbus-xen_bus_type-Support-will_handle-watch-ca.patch
 	patches.suse/0004-xen-xenbus-Count-pending-messages-for-each-watch.patch
 	patches.suse/0005-xenbus-xenbus_backend-Disallow-pending-watch-message.patch
+	patches.suse/xen-blkback-set-ring-xenblkd-to-NULL-after-kthread_s.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
