--- a/series.conf
+++ b/series.conf
@@ -27071,6 +27071,8 @@
 	patches.suse/xen-disable_hotplug_cpu.patch
 	patches.suse/0001-x86-respect-memory-size-limiting-via-mem-parameter.patch
 	patches.suse/0002-x86-xen-dont-add-memory-above-max-allowed-allocation.patch
+	# XSA-349 cleanup patches
+	patches.suse/0001-xen-revert-Disallow-pending-watch-messages.patch
 
 	########################################################
 	# kABI consistency patches
