xen: revert Count pending messages for each watch (bsc#1179508 XSA-349 CVE-2020-29568).

--- a/series.conf
+++ b/series.conf
@@ -27073,6 +27073,7 @@
 	patches.suse/0002-x86-xen-dont-add-memory-above-max-allowed-allocation.patch
 	# XSA-349 cleanup patches
 	patches.suse/0001-xen-revert-Disallow-pending-watch-messages.patch
+	patches.suse/0002-xen-revert-Count-pending-messages-for-each-watch.patch
 
 	########################################################
 	# kABI consistency patches
