xen: revert Support will_handle watch callback (bsc#1179508 XSA-349 CVE-2020-29568).

--- a/series.conf
+++ b/series.conf
@@ -27074,6 +27074,7 @@
 	# XSA-349 cleanup patches
 	patches.suse/0001-xen-revert-Disallow-pending-watch-messages.patch
 	patches.suse/0002-xen-revert-Count-pending-messages-for-each-watch.patch
+	patches.suse/0003-xen-revert-Support-will_handle-watch-ca.patch
 
 	########################################################
 	# kABI consistency patches
