--- a/series.conf
+++ b/series.conf
@@ -27075,6 +27075,7 @@
 	patches.suse/0001-xen-revert-Disallow-pending-watch-messages.patch
 	patches.suse/0002-xen-revert-Count-pending-messages-for-each-watch.patch
 	patches.suse/0003-xen-revert-Support-will_handle-watch-ca.patch
+	patches.suse/0004-xen-revert-Add-will_handle-callback-support-in-xenbu.patch
 
 	########################################################
 	# kABI consistency patches
