--- a/series.conf
+++ b/series.conf
@@ -27076,6 +27076,7 @@
 	patches.suse/0002-xen-revert-Count-pending-messages-for-each-watch.patch
 	patches.suse/0003-xen-revert-Support-will_handle-watch-ca.patch
 	patches.suse/0004-xen-revert-Add-will_handle-callback-support-in-xenbu.patch
+	patches.suse/0005-xen-revert-Allow-watches-discard-events-before-queue.patch
 
 	########################################################
 	# kABI consistency patches
