--- a/series.conf
+++ b/series.conf
@@ -27077,6 +27077,7 @@
 	patches.suse/0003-xen-revert-Support-will_handle-watch-ca.patch
 	patches.suse/0004-xen-revert-Add-will_handle-callback-support-in-xenbu.patch
 	patches.suse/0005-xen-revert-Allow-watches-discard-events-before-queue.patch
+	patches.suse/0006-xen-support-having-only-one-event-pending-per-watch.patch
 
 	########################################################
 	# kABI consistency patches
