--- a/series.conf
+++ b/series.conf
@@ -26393,6 +26393,7 @@
 	patches.suse/Fonts-Replace-discarded-const-qualifier.patch
 	patches.suse/vt-Disable-KD_FONT_OP_COPY.patch
 	patches.suse/Input-sunkbd-avoid-use-after-free-in-teardown-paths.patch
+	patches.suse/IB-hfi1-Ensure-correct-mm-is-used-at-all-times.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 	patches.suse/tty-Fix-session-locking.patch
