tun: correct header offsets in napi frags mode (bsc#1180812 CVE-2021-0342).

--- a/series.conf
+++ b/series.conf
@@ -55225,6 +55225,7 @@
 	patches.suse/Bluetooth-Consolidate-encryption-handling-in-hci_enc.patch
 	patches.suse/vxlan-Avoid-infinite-loop-when-suppressing-NS-messag.patch
 	patches.suse/net-vmxnet3-fix-possible-buffer-overflow-caused-by-b.patch
+	patches.suse/tun-correct-header-offsets-in-napi-frags-mode.patch
 	patches.suse/ipv6-fix-IPV6_ADDRFORM-operation-logic.patch
 	patches.suse/s390-bpf-maintain-8-byte-stack-alignment
 	patches.suse/vmxnet3-allow-rx-flow-hash-ops-only-when-rss-is-enab.patch
