netfilter: clear skb->next in NF_HOOK_LIST() (bsc#1180765 CVE-2021-20177).

--- a/series.conf
+++ b/series.conf
@@ -57740,6 +57740,7 @@
 	# Netfilter
 	########################################################
 	patches.suse/netfilter-ip_conntrack_slp.patch
+	patches.suse/netfilter-clear-skb-next-in-NF_HOOK_LIST.patch
 
 	########################################################
 	# Wireless Networking
