--- a/series.conf
+++ b/series.conf
@@ -26362,6 +26362,7 @@
 	patches.suse/0001-mm-hugetlb-fix-a-race-between-hugetlb-sysctl-handler.patch
 	patches.suse/rbd-require-global-cap_sys_admin-for-mapping-and-unmapping.patch
 	patches.suse/fbcon-remove-soft-scrollback-code.patch
+	patches.suse/netfilter-ctnetlink-add-a-range-check-for-l3-l4-prot.patch
 	patches.suse/hdlc_ppp-add-range-checks-in-ppp_cp_parse_cr.patch
 	patches.suse/geneve-add-transport-ports-in-route-lookup-for-genev.patch
 	patches.suse/nfs-Fix-security-label-length-not-being-reset.patch
