blacklist.conf: Add SPI fix commit to be ignored (CVE-2021-47469 bsc#1225347)
SLE12-SP5 has no devm spi controller allocation, hence it's superfluous

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3191,3 +3191,4 @@ e95d392d160baa2fbc1c0cac672abc472985418b # cleanup, no code change
 e2731e55884f2138a252b0a3d7b24d57e49c3c59 # btrfs: metadata dump v2 definition only
 b05fbcc36be1f8597a1febef4892053a0b2f3f60 # btrfs: config fix for 256k pages
 a1fd0b9d751f840df23ef0e75b691fc00cfd4743 # old knob semantic, not needed without c5b0a7eefc70150, see bsc#1224807
+6c53b45c71b4920b5e62f0ea8079a1da382b9434 # spi: no devm version present in SLE12-SP5
