--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3199,3 +3199,4 @@ b3594573681b53316ec0365332681a30463edfd6 # too intrusive, old bug and limited ri
 e70a3263a7eed768d5f947b8f2aff8d2a79c9d97 # cleanup, no code change
 91811a31b68d3765b3065f4bb6d7d6d84a7cfc9f # i2c: not vulnerable to CVE-2024-35984, see bsc#1224567#c3
 d380ce70058a4ccddc3e5f5c2063165dc07672c6 # netrom: no security implications in reading the value - WONTFIX - CVE-2024-27419 - bsc#1224759
+74e97958121aa1f5854da6effba70143f051b0cd # CVE-2024-35956 bsc#1224674: not applicable bsc#1225945
