--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3206,3 +3206,4 @@ c91774818b041ed290df29fb1dc0725be9b12e83 # code has changed and some version see
 60c5fd2e8f3c42a5abc565ba9876ead1da5ad2b7 # a cleanup-only fix that breaks kABI
 74e97958121aa1f5854da6effba70143f051b0cd # CVE-2024-35956 bsc#1224674: not applicable bsc#1225945
 1971d13ffa84a551d29a81fdf5b5ec5be166ac83 # followup for bsc#1223384 but this is only lockdep infra change, non-functional
+ec29d0ac29be366450a7faffbcf8cba3a6a3b506 # bsc#1225047 CVE-2021-47328: breaks kABI
