blacklist.conf: bsc#1225559 CVE-2023-5281
Does not apply cleanly at all, and addresses
a corner case that it knows is rare.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3207,3 +3207,4 @@ c91774818b041ed290df29fb1dc0725be9b12e83 # code has changed and some version see
 74e97958121aa1f5854da6effba70143f051b0cd # CVE-2024-35956 bsc#1224674: not applicable bsc#1225945
 1971d13ffa84a551d29a81fdf5b5ec5be166ac83 # followup for bsc#1223384 but this is only lockdep infra change, non-functional
 ec29d0ac29be366450a7faffbcf8cba3a6a3b506 # bsc#1225047 CVE-2021-47328: breaks kABI
+b39f2d10b86d0af353ea339e5815820026bca48f # bsc#1225559 CVE-2023-52811: extensive changes on changed code not needed
