--- a/blacklist.conf
+++ b/blacklist.conf
@@ -3208,3 +3208,4 @@ c91774818b041ed290df29fb1dc0725be9b12e83 # code has changed and some version see
 1971d13ffa84a551d29a81fdf5b5ec5be166ac83 # followup for bsc#1223384 but this is only lockdep infra change, non-functional
 ec29d0ac29be366450a7faffbcf8cba3a6a3b506 # bsc#1225047 CVE-2021-47328: breaks kABI
 b39f2d10b86d0af353ea339e5815820026bca48f # bsc#1225559 CVE-2023-52811: extensive changes on changed code not needed
+51e6ed83bb4ade7c360551fa4ae55c4eacea354b # bsc#1222879 CVE-2021-47193: breaks kABI
